Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57509

Texture data updates not being picked up correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.8.0
    • 5.8.0 RC
    • Qt3D
    • None
    • 0de007ab0e9c23bfeb9eba26798df05a06439821 7eb54642ba19a995e251518448a4896943dea1d2 2f3837cdbce8b27499db03f376e3781f5aede317

    Description

      Following the texture refactoring, textures are correctly uploaded at application startup. However if the content of texture data is later changed, e.g. by changing source property of a TextureImage, this is never made available to the GPU.

      Tracing this through, the texture image data generator is correctly executed but it seems the OpenGL submission thread tries to upload the data before the new data is made available to the TextureDataManager. The subsequent clearing of the dirty flag means it never gets uploaded.

      To fix this I have re-purposed the TextureData dirty flag in GLTexture to mean that the generators have been executed and the data is ready and available for upload. This flag was actually redundant for the purpose of scheduling the generators to be executed as that is handled directly by the texture data manager and GLTexture.

      Patch coming to gerrit momentarily...

      Attachments

        For Gerrit Dashboard: QTBUG-57509
        # Subject Branch Project Status CR V

        Activity

          People

            seanharmer Sean Harmer
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes