src/render/texture/texturedatamanager_p.h
@@ -57,6 +57,7 @@
 #include <Qt3DRender/qtextureimagedata.h>
 #include <Qt3DRender/qtexturegenerator.h>
 #include <Qt3DRender/qtextureimagedatagenerator.h>
+#include <Qt3DRender/private/gltexture_p.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -91,7 +92,7 @@ public:
      * generators are executed the next frame. Reference generator by
      * given texture
      */
-    void requestData(const GeneratorPtr &generator, const APITexture *tex)
+    void requestData(const GeneratorPtr &generator, APITexture *tex)
     {
         QMutexLocker lock(&m_mutex);
 
@@ -107,7 +108,7 @@ public:
      * Dereference given generator from texture. If no other textures still reference
      * the generator, the associated data will be deleted
      */
-    void releaseData(const GeneratorPtr &generator, const APITexture *tex)
+    void releaseData(const GeneratorPtr &generator, APITexture *tex)
     {
         QMutexLocker lock(&m_mutex);
 
@@ -159,17 +160,24 @@ public:
         QMutexLocker lock(&m_mutex);
 
         Entry *entry = findEntry(generator);
-        if (!entry)
+        if (!entry) {
             qWarning() << "[TextureDataManager] assignData() called with non-existent generator";
-        else
+        } else {
             entry->data = data;
+
+            // Mark each texture that references this data as being dirty
+            // so that the submission thread knows to upload
+            for (auto texture : qAsConst(entry->referencingTextures)) {
+                texture->requestUpload();
+            }
+        }
     }
 
 private:
 
     struct Entry {
         GeneratorPtr generator;
-        QVector<const APITexture*> referencingTextures;
+        QVector<APITexture*> referencingTextures;
         DataPtr data;
     };
 
@@ -197,8 +205,6 @@ private:
     QMutex m_mutex;
     QVector<Entry> m_data;
 };
-
-class GLTexture;
 
 class Q_AUTOTEST_EXPORT TextureDataManager
         : public GeneratorDataManager<QTextureGeneratorPtr, QTextureDataPtr, GLTexture>
